@@ -30,22 +30,22 @@ class ecodevice_teleinfo extends eqLogic {
 
 	private function getListeDefaultCommandes()
 	{
-		return array("BASE" => array('Index (base)', 'numeric', 'W', 1, "BASE", "CONSUMPTION", 'badge', ''),
-		"HCHC" => array('Index (heures creuses)', 'numeric', 'W', 1, "HC", "CONSUMPTION", 'badge', ''),
-		"HCHP" => array('Index (heures pleines)', 'numeric', 'W', 1, "HC", "CONSUMPTION", 'badge', ''),
-		"BBRHCJB" => array('Index (heures creuses jours bleus Tempo)', 'numeric', 'W', 0, "BBRH", "CONSUMPTION", 'badge', ''),
-		"BBRHPJB" => array('Index (heures pleines jours bleus Tempo)', 'numeric', 'W', 0, "BBRH", "CONSUMPTION", 'badge', ''),
-		"BBRHCJW" => array('Index (heures creuses jours blancs Tempo)', 'numeric', 'W', 0, "BBRH", "CONSUMPTION", 'badge', ''),
-		"BBRHPJW" => array('Index (heures pleines jours blancs Tempo)', 'numeric', 'W', 0, "BBRH", "CONSUMPTION", 'badge', ''),
-		"BBRHCJR" => array('Index (heures creuses jours rouges Tempo)', 'numeric', 'W', 0, "BBRH", "CONSUMPTION", 'badge', ''),
-		"BBRHPJR" => array('Index (heures pleines jours rouges Tempo)', 'numeric', 'W', 0, "BBRH", "CONSUMPTION", 'badge', ''),
-		"EJPHN" => array('Index (normal EJP)', 'numeric', 'W', 0, "EJP", "CONSUMPTION", 'badge', ''),
-		"EJPHPM" => array('Index (pointe mobile EJP)', 'numeric', 'W', 0, "EJP", "CONSUMPTION", 'badge', ''),
+		return array("BASE" => array('Index (base)', 'numeric', 'Wh', 1, "BASE", "CONSUMPTION", 'badge', ''),
+		"HCHC" => array('Index (heures creuses)', 'numeric', 'Wh', 1, "HC", "CONSUMPTION", 'badge', ''),
+		"HCHP" => array('Index (heures pleines)', 'numeric', 'Wh', 1, "HC", "CONSUMPTION", 'badge', ''),
+		"BBRHCJB" => array('Index (heures creuses jours bleus Tempo)', 'numeric', 'Wh', 0, "BBRH", "CONSUMPTION", 'badge', ''),
+		"BBRHPJB" => array('Index (heures pleines jours bleus Tempo)', 'numeric', 'Wh', 0, "BBRH", "CONSUMPTION", 'badge', ''),
+		"BBRHCJW" => array('Index (heures creuses jours blancs Tempo)', 'numeric', 'Wh', 0, "BBRH", "CONSUMPTION", 'badge', ''),
+		"BBRHPJW" => array('Index (heures pleines jours blancs Tempo)', 'numeric', 'Wh', 0, "BBRH", "CONSUMPTION", 'badge', ''),
+		"BBRHCJR" => array('Index (heures creuses jours rouges Tempo)', 'numeric', 'Wh', 0, "BBRH", "CONSUMPTION", 'badge', ''),
+		"BBRHPJR" => array('Index (heures pleines jours rouges Tempo)', 'numeric', 'Wh', 0, "BBRH", "CONSUMPTION", 'badge', ''),
+		"EJPHN" => array('Index (normal EJP)', 'numeric', 'Wh', 0, "EJP", "CONSUMPTION", 'badge', ''),
+		"EJPHPM" => array('Index (pointe mobile EJP)', 'numeric', 'Wh', 0, "EJP", "CONSUMPTION", 'badge', ''),
 		"IINST" => array('Intensité instantanée', 'numeric', 'A', 1, "", "POWER", 'default', 'Mono'),
 		"IINST1" => array('Intensité instantanée 1', 'numeric', 'A', 0, "", "POWER", 'default', 'Tri'),
 		"IINST2" => array('Intensité instantanée 2', 'numeric', 'A', 0, "", "POWER", 'default', 'Tri'),
 		"IINST3" => array('Intensité instantanée 3', 'numeric', 'A', 0, "", "POWER", 'default', 'Tri'),
-		"PPAP" => array('Puissance Apparente', 'numeric', 'W', 1, "", "POWER", 'badge', ''),
+		"PPAP" => array('Puissance Apparente', 'numeric', 'VA', 1, "", "POWER", 'badge', ''),
 		"OPTARIF" => array('Option tarif', 'string', '', 1, "", "GENERIC_INFO", 'badge', ''),
 		"DEMAIN" => array('Couleur demain', 'string', '', 0, "BBRH", "GENERIC_INFO", 'badge', ''),
 		"PTEC" => array('Tarif en cours', 'string', '', 1, "", "GENERIC_INFO", 'badge', ''),
