@@ -3,10 +3,11 @@ WARNING: Detail complet des mises à jour sur https://github.com/guenneguezt/plu
 
 Liste des évolutions majeures de la version courante :
 
-- Ajout d'une Clef API specifique au plugin
+- Suppression du lien Paypal pour être conforme avec Jeedom V3.1
 
 Anciennes évolutions :
 
+- Ajout d'une Clef API specifique au plugin
 - Modification pour compatibilité Jeedom V3
 - Plus de suivi de version
 - Correction pour firmware 1.04.82
